--- a/srlc/srl/templates/srl/il_leaderboard.html
+++ b/srlc/srl/templates/srl/il_leaderboard.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="speedrun, leaderboards, thps, thps1, thps2, thps, World Record, Personal Best">
 
-        {% if "/lbs/ils/" in request.path %}
+        {% if "/ils" in request.path %}
             {% if game_abbr == "thps12" %}
                 <title>THPS1+2 IL Leaderboards - thps.run</title>
             {% elif game_abbr == "thps12ce" %}
