--- a/srlc/srl/templates/srl/leaderboard.html
+++ b/srlc/srl/templates/srl/leaderboard.html
@@ -73,7 +73,7 @@
                     <tr>
                         <td>{{ item.rank }}</td>
                         {% if item.countrycode %}
-                            <td><img src="https://flagcdn.com/h20/{{ item.countrycode }}.png" onerror="this.onerror=null; this.src=''" height="15" />
+                            <td><img src="https://flagcdn.com/h20/{{ item.countrycode }}.png" title="{{ item.countryname }}" alt="{{ item.countryname }}" onerror="this.onerror=null; this.src=''" height="15" />
                                 {% if item.nickname %}
                                     <a href="/player/{{ item.player }}">{{ item.nickname }}</a></td>
                                 {% else %}
@@ -123,7 +123,7 @@
             
                 function populateLeaderboard(data) {
                     var tableBody = document.getElementById("leaderboardTable").getElementsByTagName('tbody')[0];
-                    tableBody.innerHTML = ''; // Clear the existing content
+                    tableBody.innerHTML = '';
             
                     data.forEach(function(item, index) {
                         var row = tableBody.insertRow();
