--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -44,7 +44,7 @@
                                 <li><a class="dropdown-item" href="/thps5/">THPS5</a></li>
                                 <li><a class="dropdown-item" href="/thhd/">THHD</a></li>
                                 <li><a class="dropdown-item" href="/thps12/">THPS1+2</a></li>
-                                </ul>
+                            </ul>
                         </li>
                         <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
                             <ul class="dropdown-menu dropdown-submenu">
@@ -97,13 +97,35 @@
                                 <li><a class="dropdown-item" href="/thaw/ils">THAW</a></li>
                                 <li><a class="dropdown-item" href="/thpg/ils">THPG</a></li>
                                 <li><a class="dropdown-item" href="/thdj/ils">THDJ</a></li>
-                                
                             </ul>
                         </li>
                         <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li><a class="dropdown-item" href="/thps4ce/ils">THPS4 CE</a></li>
                                 <li><a class="dropdown-item" href="/thps12ce/ils">THPS1+2 CE</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </li>
+            <div class="vr"></div>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mods</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">PARTYMOD</a>
+                            <ul class="dropdown-menu dropdown-submenu">
+                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps2" target="_blank">THPS2</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps3" target="_blank">THPS3</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thps4" target="_blank">THPS4</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thug1" target="_blank">THUG1</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thug2" target="_blank">THUG2</a></li>
+                                <li><a class="dropdown-item" href="https://github.com/PARTYMANX/partymod-thaw" target="_blank">THAW</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">ClownJob'd</a>
+                            <ul class="dropdown-menu dropdown-submenu">
+                                <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1291.0" target="_blank">THUG1</a></li>
+                                <li><a class="dropdown-item" href="https://thpsx.com/forums/index.php?topic=1529.0" target="_blank">THUG2</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -116,9 +138,6 @@
             </li>
             <li class="nav-item me-3 me-lg-0">
                 <a href="/twitch" class="soc" target="_blank"><i class="fab fa-twitch fa-lg"></i></a>
-            </li>
-            <li class="nav-item me-3 me-lg-0">
-                <a href="/twitter" class="soc" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
             </li>
             <li class="nav-item me-3 me-lg-0">
                 <a href="/youtube" class="soc" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
