NPM change; Bluesky added; Player profile logic changed
- NPM is an optional thing and doesn't start automatically. Newer READMEs will talk about this more.
- Bluesky support added and CSS updated for font awesome.
- Player profiles updated to be more dynamic versus hardcoded.
- Optimized main Dockerfile.

--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-header">
@@ -138,6 +138,9 @@
             </li>
             <li class="nav-item me-3 me-lg-0">
                 <a href="/twitch" class="soc" target="_blank"><i class="fab fa-twitch fa-lg"></i></a>
+            </li>
+            <li class="nav-item me-3 me-lg-0">
+                <a href="/bluesky" class="soc" target="_blank"><i class="fab fa-bluesky fa-lg"></i></a>
             </li>
             <li class="nav-item me-3 me-lg-0">
                 <a href="/youtube" class="soc" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
