--- a/srlc/srl/templates/srl/changelog.html
+++ b/srlc/srl/templates/srl/changelog.html
@@ -74,8 +74,32 @@
                     </div>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="currentversions" data-bs-parent="#accordionversions">
                         <div class="accordion-body">
-                            | <a href="#v22">v2.2 - The BIG Update</a> | <a href="#v221">v2.2.1</a> | <a href="#v2211">v2.2.1.1 (current)</a> |
+                            | <a href="#v23">v2.2 - The Guides Update (current)</a> |
                             <hr />
+                            <h3 id="v23">v2.3 - The Guides Update (current)</h3>
+                            <h6>??? ??, 2025</h6>
+
+                            
+                        </div>
+                    </div>
+                </div>
+            
+                <!--OLDER VERIONS BELOW-->
+
+                <div class="card">
+                    <div class="card-header" id="oldversions">
+                        <h5 class="mb-0">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">Older Patches</button>
+                        </h5>
+                    </div>
+            
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="oldversions" data-bs-parent="#accordionversions">
+                        <div class="accordion-body">
+                            | <a href="#v21">v2.1 - The API Update</a> | <a href="#v2101">v2.1.0.1</a> | <a href="#v211">v2.1.1</a> | <a href="#v212">v2.1.2</a> | <a href="#v213">v2.1.3</a> | <a href="#v214">v2.1.4</a> | <a href="#v215">v2.1.5</a> | <a href="#v216">v2.1.6</a> | <a href="#v217">v2.1.7</a> | <br/>
+                            | <a href="#v20">v2.0 - The Fucking Finally Update</a> | <a href="#v201">v2.0.1</a> | <a href="#v202">v2.0.2</a> | <a href="#v203">v2.0.3</a> | <a href="#v204">v2.0.4</a> | <a href="#v205">v2.0.5</a> | <a href="#v2051">v2.0.5.1</a> |<br />
+                            | <a href="#v22">v2.2 - The BIG Update</a> | <a href="#v221">v2.2.1</a> | <a href="#v2211">v2.2.1.1</a> |
+                            <hr />
+
                             <h3 id="v2211">v2.2.1.1 (current)</h3>
                             <h6>March 24, 2025</h6>
                             <ul>
@@ -221,23 +245,6 @@
                                 <li>Removed the "THP8 - Rank 1" category from the main page.</li>
                             </ul>
                             <a href="#top">Back to Top</a>
-                        </div>
-                    </div>
-                </div>
-            
-                <!--OLDER VERIONS BELOW-->
-
-                <div class="card">
-                    <div class="card-header" id="oldversions">
-                        <h5 class="mb-0">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">Older Patches</button>
-                        </h5>
-                    </div>
-            
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="oldversions" data-bs-parent="#accordionversions">
-                        <div class="accordion-body">
-                            | <a href="#v21">v2.1 - The API Update</a> | <a href="#v2101">v2.1.0.1</a> | <a href="#v211">v2.1.1</a> | <a href="#v212">v2.1.2</a> | <a href="#v213">v2.1.3</a> | <a href="#v214">v2.1.4</a> | <a href="#v215">v2.1.5</a> | <a href="#v216">v2.1.6</a> | <a href="#v217">v2.1.7</a> | <br/>
-                            | <a href="#v20">v2.0 - The Fucking Finally Update</a> | <a href="#v201">v2.0.1</a> | <a href="#v202">v2.0.2</a> | <a href="#v203">v2.0.3</a> | <a href="#v204">v2.0.4</a> | <a href="#v205">v2.0.5</a> | <a href="#v2051">v2.0.5.1</a> |
                             <hr />
                             
                             <h3 id="v217">v2.1.7</h3>
