--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -134,19 +134,19 @@
         </ul>
         <ul class="navbar-nav social ml-autio">
             <li class="nav-item me-3 me-lg-0">
-                <a href="/discord" class="soc" target="_blank"><i class="fab fa-discord fa-lg"></i></a>
+                <a href="/discord" class="soc" target="_blank"><i class="fab fa-discord fa-lg" alt="Community Discord" title="Community Discord"></i></a>
             </li>
             <li class="nav-item me-3 me-lg-0">
-                <a href="/twitch" class="soc" target="_blank"><i class="fab fa-twitch fa-lg"></i></a>
+                <a href="/twitch" class="soc" target="_blank"><i class="fab fa-twitch fa-lg" alt="Community Twitch" title="Community Twitch"></i></a>
             </li>
             <li class="nav-item me-3 me-lg-0">
-                <a href="/bluesky" class="soc" target="_blank"><i class="fab fa-bluesky fa-lg"></i></a>
+                <a href="/youtube" class="soc" target="_blank"><i class="fab fa-youtube fa-lg" alt="Community YouTube" title="Community YouTube"></i></a>
             </li>
             <li class="nav-item me-3 me-lg-0">
-                <a href="/youtube" class="soc" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
+                <a href="/bluesky" class="soc" target="_blank"><i class="fab fa-bluesky fa-lg" alt="Community Bluesky" title="Community Bluesky"></i></a>
             </li>
             <li class="nav-item me-3 me-lg-0">
-                <a href="/src" class="soc" target="_blank"><i class="fas fa-trophy fa-lg"></i></a>
+                <a href="/src" class="soc" target="_blank"><i class="fas fa-trophy fa-lg" alt="Communuty Speedrun.com Leaderboards" title="Community Speedrun.com Leaderboards"></i></a>
             </li>
         </ul>
     </div>
