--- a/srlc/website/static/srl/misc/css.css
+++ b/srlc/website/static/srl/misc/css.css
@@ -38,6 +38,7 @@ td{
 .table{
     padding: 0.5%;
     text-align: center;
+    vertical-align:middle;
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(255,255,255,.85);
